test/files/invalid/bad_token_recovery.stderr
error: unrecognized token `identifier "blabla"`, expected one of "include", "native_include", "namespace", "attribute", "table", "struct", "enum", "union", "root_type", "rpc_service", "file_extension", "file_identifier", end_of_stream
  ┌─ test/files/invalid/bad_token_recovery.fbs:1:1
  │
1 │ blabla "foo";
  │ ^^^^^^

error: Could not read file "test/files/invalid/foo": No such file or directory (os error 2)
  ┌─ test/files/invalid/bad_token_recovery.fbs:3:9
  │
3 │ include "foo";
  │         ^^^^^

